chapter5-1
Last login: Fri Sep  9 18:48:14 on ttys000
(base) malcolmphillip@Malcolms-MacBook-Air ~ % cd desktop
(base) malcolmphillip@Malcolms-MacBook-Air desktop % course "44-608"
zsh: command not found: course
(base) malcolmphillip@Malcolms-MacBook-Air desktop % cd "course 44-608"
(base) malcolmphillip@Malcolms-MacBook-Air course 44-608 % ls
44-608 Data Analytics Fundamentals	608-mod5
608-mod1				608-mod6
608-mod2				608-mod7
608-mod3				Course 44-608 
608-mod4				IntroToPython
(base) malcolmphillip@Malcolms-MacBook-Air course 44-608 % 608-mod4
zsh: command not found: 608-mod4
(base) malcolmphillip@Malcolms-MacBook-Air course 44-608 % cd "608-mod4"
(base) malcolmphillip@Malcolms-MacBook-Air 608-mod4 % ipython
Python 3.9.12 (main, Jun  1 2022, 06:36:29) 
Type 'copyright', 'credits' or 'license' for more information
IPython 8.4.0 -- An enhanced Interactive Python. Type '?' for help.

In [1]: c = [-45, 6, 0, 72, 1543]

In [2]: c[0]
Out[2]: -45

In [3]: c[4]
Out[3]: 1543

In [4]: list(c)
Out[4]: [-45, 6, 0, 72, 1543]

In [5]: len(c)
Out[5]: 5

In [6]: c[-1]
Out[6]: 1543

In [7]: c[-2]
Out[7]: 72

In [8]: c[100]
---------------------------------------------------------------------------
IndexError                                Traceback (most recent call last)
Input In [8], in <cell line: 1>()
----> 1 c[100]

IndexError: list index out of range

In [9]: c[0] + c[1] + c[2]
Out[9]: -39

In [10]: a_list = []

In [11]: for number in range(0, 5):
    ...:     a_list += [number]
    ...: 

In [12]: number
Out[12]: 4

In [13]: for number in range(1, 6):
    ...:     a__list += [number]
    ...: 
---------------------------------------------------------------------------
NameError                                 Traceback (most recent call last)
Input In [13], in <cell line: 1>()
      1 for number in range(1, 6):
----> 2     a__list += [number]

NameError: name 'a__list' is not defined

In [14]: for number in range(1, 6):
    ...:     a_list += [number]
    ...: 

In [15]: a_list
Out[15]: [0, 1, 2, 3, 4, 1, 2, 3, 4, 5]

In [16]: b_list= [90, 21, 39, 59, 40]

In [17]: b_list2= [15, 10, 8]

In [18]: combined_list = a_list + b_list + b_list2

In [19]: combined_list
Out[19]: [0, 1, 2, 3, 4, 1, 2, 3, 4, 5, 90, 21, 39, 59, 40, 15, 10, 8]

In [20]: two_list = b_list + b_list2

In [21]: two_list
Out[21]: [90, 21, 39, 59, 40, 15, 10, 8]

In [22]: letters = [python]
---------------------------------------------------------------------------
NameError                                 Traceback (most recent call last)
Input In [22], in <cell line: 1>()
----> 1 letters = [python]

NameError: name 'python' is not defined

In [23]: letters []
  Input In [23]
    letters []
             ^
SyntaxError: invalid syntax


In [24]: letters += "python"
---------------------------------------------------------------------------
NameError                                 Traceback (most recent call last)
Input In [24], in <cell line: 1>()
----> 1 letters += "python"

NameError: name 'letters' is not defined

In [25]: letters = []

In [26]: letters += "python"

In [27]: 

In [27]: letters
Out[27]: ['p', 'y', 't', 'h', 'o', 'n']

In [28]: for i in range(len(letters)):
    ...:     print(f'{i}: {letters[i}')
  Input In [28]
    print(f'{i}: {letters[i}')
                             ^
SyntaxError: f-string: closing parenthesis '}' does not match opening parenthesis '['


In [29]: for i in range(len(letters)):
    ...:     print(f'{i}: {letters[i]}')
    ...: 
0: p
1: y
2: t
3: h
4: o
5: n

In [30]: alist == b_list
---------------------------------------------------------------------------
NameError                                 Traceback (most recent call last)
Input In [30], in <cell line: 1>()
----> 1 alist == b_list

NameError: name 'alist' is not defined

In [31]: a_list == b_list
Out[31]: False

In [32]: a_list < b_list
Out[32]: True

In [33]: a_list < b_list2
Out[33]: True

In [34]: b_list2 >= a_list
Out[34]: True

In [35]: def cube_list(values):
    ...:     for i in range(len(values)):
    ...:         values[i] **= 3
    ...: 

In [36]: numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]

In [37]: cube_list(numbers)

In [38]: numbers
Out[38]: [1, 8, 27, 64, 125, 216, 343, 512, 729, 1000]

In [39]: print("Successful completion by Malcolm Phillip".)
  Input In [39]
    print("Successful completion by Malcolm Phillip".)
                                                     ^
SyntaxError: invalid syntax


In [40]: 
